--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
 body {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 12px;
+
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    width: 950px;
+    background-color: azure;
+    border-radius: 25px;
 
 }
 
@@ -23,11 +33,33 @@ body {
 .right {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    padding: 20px;
-    
+    justify-content: space-evenly;
+
+
+}
+
+.form {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 5px;
+    padding: 0px 50px 20px 20px;
+
+
+}
+
+.intro {
+    font-size: large;
+    padding: 0px 50px 20px 20px;
+}
+
+.submit {
+    font-size: 10px;
+    padding: 0px 50px 20px 20px;
 }
 
 button {
-    
+    background: lightpink;
+    border-radius: 20px;
+    border-color: lightpink;
+    height: 30px;
+    width: 150px;
 }
