--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: DejaVu Sans Mono;
     font-size: 12px;
 
 }
@@ -19,15 +19,25 @@ body {
 .left {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
-    width: 300px;
+    align-content: center;
+    width: 400px;
     height: 400px;
     background-size: cover;
     background-image: url('backgroundleft.jpg');
-    font-size: 5px;
+    font-size: 8px;
     color: white;
 
+}
+
+.logo {
+    background-color: black;
+    opacity: .5;
+    margin-top: 50px;
+    padding: 0 100px 0 100px;
+
+    
 }
 
 .right {
@@ -47,7 +57,7 @@ body {
 }
 
 .intro {
-    font-size: large;
+    font-size: 15px;
     padding: 0px 50px 20px 20px;
 }
 
